tests/data/PRD_v1.22/Approved/NegativeSyntaxTest/No_free_variables/No_free_variables-input.rifps
Document(

   Prefix(eg <http://example.org/example#>)

   Group
   (
     Forall ?buyer ?item ?seller (
	If eg:Sell(?seller ?item ?buyer ?price)
	Then eg:Buy(?buyer ?item ?seller)
     )
   )
 )
